--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.5.1",
+    "@google/generative-ai": "^0.18.0",
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "lucide-react": "^0.439.0",
     "next": "14.2.8",
-    "openai": "^4.58.2",
+    "openai": "^4.59.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
