--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.1",
     "replicate": "^0.33.0",
     "tailwind-merge": "^2.5.2",
